Fixed bug #39034 (curl_exec() with return transfer returns TRUE on empty files).